Fix overlay spacing between title, name label, and input field

--- a/_sass/_snake-game.scss
+++ b/_sass/_snake-game.scss
@@ -82,13 +82,13 @@
   color: #fff;
   font-size: 1.8em;
   font-weight: 800;
-  margin-bottom: 0.15em;
+  margin-bottom: 0.3em;
 }
 
 .snake-overlay-score {
   color: rgba(255, 255, 255, 0.85);
   font-size: 1.05em;
-  margin-bottom: 0.6em;
+  margin-bottom: 0.5em;
   min-height: 1.3em;
 }
 
@@ -97,7 +97,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-bottom: 0.8em;
+  margin-top: 0.3em;
+  margin-bottom: 1em;
   width: 80%;
   max-width: 220px;
 }
@@ -105,7 +106,7 @@
 .snake-overlay-name-label {
   color: rgba(255, 255, 255, 0.85);
   font-size: 0.85em;
-  margin-bottom: 0.3em;
+  margin-bottom: 0.4em;
 }
 
 .snake-overlay-name-input {
